--- a/data/jpa/pom.xml
+++ b/data/jpa/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>bleach-data-jpa</artifactId>
   <parent>
-    <groupId>com.iampfac</groupId>
+    <groupId>com.iampfac.bleach</groupId>
     <version>0.0.1-SNAPSHOT</version>
     <artifactId>bleach-data</artifactId>
   </parent>
