--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -2,13 +2,20 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>bleach-rest</artifactId>
   <parent>
-    <groupId>com.iampfac</groupId>
+    <groupId>com.iampfac.bleach</groupId>
     <version>0.0.1-SNAPSHOT</version>
     <artifactId>bleach</artifactId>
     <relativePath>..</relativePath>
   </parent>
   
   <dependencies>
+    <!-- Bleach -->
+    <dependency>
+      <groupId>com.iampfac.bleach</groupId>
+      <artifactId>bleach-core</artifactId>
+    </dependency>
+
+    <!-- Spring -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
@@ -21,7 +28,23 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
     </dependency>
-  
+    
+    <!-- Logging -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+    </dependency>
+    
+    <!-- JSON -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
+
     <!-- Testing -->
     <dependency>
       <groupId>junit</groupId>
