Adds unit tests for Post

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -7,4 +7,18 @@
     <artifactId>bleach</artifactId>
     <relativePath>..</relativePath>
   </parent>
+  
+  <dependencies>
+    <!-- Testing -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
