--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   </modules>
   
   <properties>
+    <commons.lang3.version>3.3.2</commons.lang3.version>
     <jackson.version>2.4.4</jackson.version>
     <junit.version>4.11</junit.version>
     <logback.version>1.1.2</logback.version>
@@ -78,6 +79,13 @@
         <version>${jackson.version}</version>
       </dependency>
       
+      <!-- Commons -->
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>${commons.lang3.version}</version>
+      </dependency>
+
       <!-- Testing -->
       <dependency>
         <groupId>junit</groupId>
