--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,19 @@
   </modules>
   
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    
     <commons.lang3.version>3.3.2</commons.lang3.version>
+    <hamcrest.version>1.3</hamcrest.version>
+    <hibernate.version>4.3.7.Final</hibernate.version>
     <jackson.version>2.4.4</jackson.version>
+    <jsonpath.version>1.2.0</jsonpath.version>
     <junit.version>4.11</junit.version>
     <logback.version>1.1.2</logback.version>
+    <mockito.version>1.10.8</mockito.version>
     <slf4j.version>1.7.7</slf4j.version>
     <spring.version>4.1.2.RELEASE</spring.version>
+    <spring.data.jpa.version>1.7.1.RELEASE</spring.data.jpa.version>
     <test.servlet.version>3.1.0</test.servlet.version>
   </properties>
   
@@ -35,7 +42,7 @@
       <!-- Spring -->
       <dependency>
         <groupId>org.springframework</groupId>
-        <artifactId>spring-context</artifactId>
+        <artifactId>spring-core</artifactId>
         <version>${spring.version}</version>
         <exclusions>
           <exclusion>
@@ -58,6 +65,20 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
         <version>${spring.version}</version>
+      </dependency>
+      
+      <!-- Hibernate -->
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-entitymanager</artifactId>
+        <version>${hibernate.version}</version>
+      </dependency>
+      
+      <!-- Spring Data -->
+      <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-jpa</artifactId>
+        <version>${spring.data.jpa.version}</version>
       </dependency>
       
       <!-- Logging -->
@@ -88,9 +109,40 @@
 
       <!-- Testing -->
       <dependency>
+        <groupId>com.iampfac.bleach</groupId>
+        <artifactId>bleach-core</artifactId>
+        <version>${project.version}</version>
+        <scope>test</scope>
+        <type>test-jar</type>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>${mockito.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-core</artifactId>
+        <version>${hamcrest.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-library</artifactId>
+        <version>${hamcrest.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.jayway.jsonpath</groupId>
+        <artifactId>json-path</artifactId>
+        <version>${jsonpath.version}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -117,6 +169,44 @@
         <configuration>
           <source>1.7</source>
           <target>1.7</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.5</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+          <check>
+            <branchRate>85</branchRate>
+            <lineRate>85</lineRate>
+            <haltOnFailure>true</haltOnFailure>
+            <totalBranchRate>85</totalBranchRate>
+            <totalLineRate>85</totalLineRate>
+            <packageLineRate>85</packageLineRate>
+            <packageBranchRate>85</packageBranchRate>
+            <regexes>
+              <regex>
+                <pattern>com.iampfac.bleach.core.*</pattern>
+                <branchRate>90</branchRate>
+                <lineRate>80</lineRate>
+              </regex>
+            </regexes>
+          </check>
+          <formats>
+            <format>html</format>
+          </formats>
         </configuration>
       </plugin>
       <plugin>
