--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     
     <commons.lang3.version>3.3.2</commons.lang3.version>
     <hamcrest.version>1.3</hamcrest.version>
+    <h2.version>1.4.182</h2.version>
     <hibernate.version>4.3.7.Final</hibernate.version>
     <jackson.version>2.4.4</jackson.version>
     <jsonpath.version>1.2.0</jsonpath.version>
@@ -26,6 +27,7 @@
     <mockito.version>1.10.8</mockito.version>
     <slf4j.version>1.7.7</slf4j.version>
     <spring.version>4.1.2.RELEASE</spring.version>
+    <spring.data.commons.version>1.9.1.RELEASE</spring.data.commons.version>
     <spring.data.jpa.version>1.7.1.RELEASE</spring.data.jpa.version>
     <test.servlet.version>3.1.0</test.servlet.version>
   </properties>
@@ -53,7 +55,17 @@
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
+        <artifactId>spring-beans</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-orm</artifactId>
         <version>${spring.version}</version>
       </dependency>
       <dependency>
@@ -77,6 +89,11 @@
       <!-- Spring Data -->
       <dependency>
         <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-commons</artifactId>
+        <version>${spring.data.commons.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.data</groupId>
         <artifactId>spring-data-jpa</artifactId>
         <version>${spring.data.jpa.version}</version>
       </dependency>
@@ -98,6 +115,13 @@
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
         <version>${jackson.version}</version>
+      </dependency>
+      
+      <!-- Database drivers -->
+      <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>${h2.version}</version>
       </dependency>
       
       <!-- Commons -->
