Adds configuration for Coveralls integration

--- a/pom.xml
+++ b/pom.xml
@@ -229,9 +229,17 @@
             </regexes>
           </check>
           <formats>
+            <format>xml</format>
             <format>html</format>
           </formats>
+          <maxmem>256m</maxmem>
+          <aggregate>true</aggregate>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.eluder.coveralls</groupId>
+        <artifactId>coveralls-maven-plugin</artifactId>
+        <version>3.0.1</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
