--- a/web/jsp/pom.xml
+++ b/web/jsp/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>bleach-web</artifactId>
-  <packaging>pom</packaging>
+  <artifactId>bleach-web-jsp</artifactId>
+  <packaging>war</packaging>
   <parent>
     <groupId>com.iampfac.bleach</groupId>
     <version>0.0.1-SNAPSHOT</version>
-    <artifactId>bleach</artifactId>
+    <artifactId>bleach-web</artifactId>
     <relativePath>..</relativePath>
   </parent>
 </project>
