--- a/data/jpa/pom.xml
+++ b/data/jpa/pom.xml
@@ -19,6 +19,10 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-entitymanager</artifactId>
     </dependency>
+    <dependency>
+      <groupId>javax.transaction</groupId>
+      <artifactId>jta</artifactId>
+  	</dependency>
     
     <!-- Spring -->
     <dependency>
