--- a/pom.xml
+++ b/pom.xml
@@ -19,16 +19,17 @@
     <commons.lang3.version>3.4</commons.lang3.version>
     <hamcrest.version>1.3</hamcrest.version>
     <h2.version>1.4.190</h2.version>
-    <hibernate.version>5.0.2.Final</hibernate.version>
+    <hibernate.version>5.0.5.Final</hibernate.version>
     <jackson.version>2.6.3</jackson.version>
-    <jsonpath.version>2.0.0</jsonpath.version>
+    <jsonpath.version>2.1.0</jsonpath.version>
+    <jta.version>1.1</jta.version>
     <junit.version>4.12</junit.version>
     <logback.version>1.1.3</logback.version>
     <mockito.version>1.10.19</mockito.version>
-    <slf4j.version>1.7.12</slf4j.version>
-    <spring.version>4.2.2.RELEASE</spring.version>
-    <spring.data.commons.version>1.11.0.RELEASE</spring.data.commons.version>
-    <spring.data.jpa.version>1.9.0.RELEASE</spring.data.jpa.version>
+    <slf4j.version>1.7.13</slf4j.version>
+    <spring.version>4.2.3.RELEASE</spring.version>
+    <spring.data.commons.version>1.11.1.RELEASE</spring.data.commons.version>
+    <spring.data.jpa.version>1.9.1.RELEASE</spring.data.jpa.version>
     <test.servlet.version>3.1.0</test.servlet.version>
   </properties>
   
@@ -65,6 +66,11 @@
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
+        <artifactId>spring-aop</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
         <artifactId>spring-orm</artifactId>
         <version>${spring.version}</version>
       </dependency>
@@ -84,6 +90,11 @@
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-entitymanager</artifactId>
         <version>${hibernate.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.transaction</groupId>
+        <artifactId>jta</artifactId>
+        <version>${jta.version}</version>
       </dependency>
       
       <!-- Spring Data -->
@@ -239,7 +250,7 @@
       <plugin>
         <groupId>org.eluder.coveralls</groupId>
         <artifactId>coveralls-maven-plugin</artifactId>
-        <version>4.0.0</version>
+        <version>4.1.0</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
