Update dependencies Jun-2016

--- a/pom.xml
+++ b/pom.xml
@@ -18,19 +18,23 @@
     
     <commons.lang3.version>3.4</commons.lang3.version>
     <hamcrest.version>1.3</hamcrest.version>
-    <h2.version>1.4.190</h2.version>
-    <hibernate.version>5.0.5.Final</hibernate.version>
-    <jackson.version>2.6.3</jackson.version>
-    <jsonpath.version>2.1.0</jsonpath.version>
+    <h2.version>1.4.192</h2.version>
+    <hibernate.version>5.1.0.Final</hibernate.version>
+    <jackson.version>2.7.4</jackson.version>
+    <jsonpath.version>2.2.0</jsonpath.version>
     <jta.version>1.1</jta.version>
     <junit.version>4.12</junit.version>
-    <logback.version>1.1.3</logback.version>
+    <logback.version>1.1.7</logback.version>
     <mockito.version>1.10.19</mockito.version>
-    <slf4j.version>1.7.13</slf4j.version>
-    <spring.version>4.2.3.RELEASE</spring.version>
-    <spring.data.commons.version>1.11.1.RELEASE</spring.data.commons.version>
-    <spring.data.jpa.version>1.9.1.RELEASE</spring.data.jpa.version>
+    <slf4j.version>1.7.21</slf4j.version>
+    <spring.version>4.2.6.RELEASE</spring.version>
+    <spring.data.commons.version>1.12.1.RELEASE</spring.data.commons.version>
+    <spring.data.jpa.version>1.10.1.RELEASE</spring.data.jpa.version>
     <test.servlet.version>3.1.0</test.servlet.version>
+    
+    <coveralls.maven.version>4.2.0</coveralls.maven.version>
+    <maven.compiler.version>3.5.1</maven.compiler.version>
+    <maven.jar.version>3.0.0</maven.jar.version>
   </properties>
   
   <dependencyManagement>
@@ -200,7 +204,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.3</version>
+        <version>${maven.compiler.version}</version>
         <configuration>
           <source>1.7</source>
           <target>1.7</target>
@@ -209,7 +213,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>2.6</version>
+        <version>${maven.jar.version}</version>
         <executions>
           <execution>
             <goals>
@@ -250,7 +254,7 @@
       <plugin>
         <groupId>org.eluder.coveralls</groupId>
         <artifactId>coveralls-maven-plugin</artifactId>
-        <version>4.1.0</version>
+        <version>${coveralls.maven.version}</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
